# strava-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.py
strava_mcp/: __init__.py  auth.py  config.py  models.py
strava_mcp/services/: __init__.py  activities.py  analysis.py  athlete.py  streams.py
tests/: test_analysis.py  test_limits.py  test_server.py  test_server_analysis.py
